--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">    
 </head>
 <body>
     <div id="calculator">
         <div id="readout"></div>
         <div id="buttons">
-            <button class="digit">0</button>
+            <button id="clear">C</button>
+            <button id="all-clear">AC</button>
+            <button id="equals">=</button>
             <button class="digit">1</button>
             <button class="digit">2</button>
             <button class="digit">3</button>
@@ -21,11 +24,12 @@
             <button class="digit">7</button>
             <button class="digit">8</button>
             <button class="digit">9</button>
+            <button class="digit">.</button>
+            <button class="digit">0</button>
             <button class="operator">+</button>
             <button class="operator">-</button>
             <button class="operator">*</button>
-            <button class="operator">/</button>
-            <button id="equals">=</button>
+            <button class="operator">/</button> 
         </div>
     </div>
     <script src="js/main.js"></script>
